tests/ensure_parsed_saved_state/ensure_parsed_saved_state.exp
==== No errors at start====
No errors!

The Flow server is currently in IDE lazy mode and is only checking 0/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== ensure_parsed notices that B has changed ====
Error --------------------------------------------------------------------------------------------------------- B.js:4:1

Unexpected end of input, expected the token `(`

   4|
      



Found 1 error

The Flow server is currently in IDE lazy mode and is only checking 2/2 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
==== No errors after restart====
No errors!

The Flow server is currently in IDE lazy mode and is only checking 0/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== ensure_parsed notices that C has changed ====
Error -------------------------------------------------------------------------------------------------------- C.js:2:19

Cannot resolve module `./D.js`.

   2| import {bar} from './D.js';
                        ^^^^^^^^



Found 1 error

The Flow server is currently in IDE lazy mode and is only checking 3/3 files.
To learn more, visit flow.org/en/docs/lang/lazy-modes
